<resources>
    <string name="splash_footer_text">Please do not trust us.\nIt is not necessary</string>
    <string name="Contacts">Contacts</string>
    <string name="item_image">Item image</string>
    <string name="contact_name">Contact name</string>
    <string name="contact_drop_url" translatable="false">Drop URL</string>
    <string name="contact_public_key">Public key</string>
    <string name="contact_edit">Edit contact</string>
    <string name="contact_new">New contact</string>
    <string name="add">Add</string>
    <string name="add_identity">Add new identity</string>
    <string name="Select">Select</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="upload">Upload</string>
    <string name="Delete">Delete</string>
    <string name="Send">Send</string>
    <string name="folderListingUpdateError">Could not update the folder listing</string>
    <string name="Export">Export</string>
    <string name="ExportPrivateKey">Export private key</string>
    <string name="folder_export_not_implemented">Exporting folders is not implemented</string>
    <string name="confirm_delete_title">Delete?</string>
    <string name="confirm_delete_message">Do you want to delete %s?</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="aborted">Aborted</string>
    <string name="manage_identities">Manage Identities</string>
    <string name="Rename">Rename</string>
    <string name="alias_cannot_be_empty">Alias cannot be empty</string>
    <string name="identity">Identity</string>
    <string name="boxaccount">A Qabelaccount</string>
    <string name="rename_identity">Rename %s</string>
    <string name="new_identity_name">Identity alias</string>
    <string name="confirm_delete_identity_header">Delete identity?</string>
    <string name="confirm_delete_identity_message">Do you really want to delete the identity %s? This action cannot be undone!</string>
    <string name="add_folder_header">Create folder</string>
    <string name="add_folder_name">Enter folder name</string>
    <string name="create_folder">Create folder</string>
    <string name="headline_searchresult">Search result:</string>
    <string name="headline_files">File browser</string>
    <string name="filter">Filter</string>
    <string name="no_entrys_found">No files were found</string>
    <string name="ab_filesearch_hint">Enter a keyword</string>
    <string name="headline_add_contact">Add contact</string>
    <string name="headline_add_identity">Add identity</string>
    <string name="headline_contacts">Contacts</string>
    <string name="headline_identities">Identities</string>
    <string name="headline_select_upload_folder">Select upload folder</string>
    <string name="create_identity_enter_name">Please enter a name for your identity. For example, \"Jana\" or \"Forum Troll\".</string>
    <string name="create_identity_enter_phone">Please enter a valid phone number, if you want to be found by other Qabel users. This phone number will be published on Qabel Index, the public contact directory for Qabel users. This is how you can be found. If you do not wish to be found, simply skip this step by clicking \"Next\". You can still add your phone number to your identity later.  We will send you a text message to confirm your phone number.</string>
    <string name="create_identity_enter_email">Please enter a valid e-mail address if you want to be found by others Qabel users. This e-mail address will be published on Qabel Index, the public contact directory for Qabel users. This is how you can be found. If you do not wish to be found, simply skip this step by clicking \"Next\". You can still add your e-mail address to your identity later.  We will send you an e-mail to confirm your e-mail address.</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="create_identity_successful">Identity created</string>
    <string name="dialog_headline_info">Information</string>
    <string name="create_identity_enter_all_data">Please fill in all fields</string>
    <string name="finish">Finish</string>
    <string name="create_identity_enter_name_hint">Alias of your identity</string>
    <string name="create_identity_create">Create a new identity</string>
    <string name="create_identity_import">Import an identity</string>
    <string name="function_not_yet_implenented">Function not yet implemented</string>
    <string name="step_x_from_y">Step $1/$2</string>
    <string name="filter_label_date">Date</string>
    <string name="filter_label_filesize">Filesize:</string>
    <string name="ab_use_filter">Use</string>
    <string name="headline_filefilter">Filter</string>
    <string name="change">Change</string>
    <string name="unit_filesyste_mb" translatable="false">MB</string>
    <string name="unit_filesyste_gb" translatable="false">GB</string>
    <string name="unit_filesyste_kb" translatable="false">KB</string>
    <string name="unit_filesyste_bytes" translatable="false">Bytes</string>
    <string name="create_identity_already_exists">This identity already exists.</string>
    <string name="create_account_password1_hint">Password</string>
    <string name="create_account_password2_hint">Repeat the password</string>
    <string name="create_account_password_infos">Please enter your password</string>
    <string name="create_box_account">Register a Qabel account</string>
    <string name="login">Login</string>
    <string name="loggedInAs">Logged in as %s</string>
    <string name="create_account_username_hint">Username</string>
    <string name="create_account_login_infos">Please log in to your Qabel account </string>
    <string name="create_account_enter_name_infos">Please enter a username for your Qabel account. A username can have up to 30 characters</string>
    <string name="create_account_name_hint">Username</string>
    <string name="create_account_enter_all_data">Please fill out all data to continue</string>
    <string name="create_account_maximum_32_chars">The maximum length of account name is 32 characters</string>
    <string name="create_account_email">Please enter your E-Mail. With this address can you reset your account</string>
    <string name="email_hint">Your E-Mail</string>
    <string name="create_account_passwords_dont_match">Your entered passwords don\'t match. Please enter the same password in both fields</string>
    <string name="create_account_final">Your Qabel account is now available.</string>
    <string name="create_identity_final_text">Please note that your identity is only stored to this device. Qabel or third parties do not have copies on their servers.  Please backup your identity as .qid and store it safely. The identity with the ending .qid contains the private key of your identity and should not be disclosed.</string>
    <string name="filebrowser">Files</string>
    <string name="settings_headline_boxaccount">Qabel account</string>
    <string name="headline_settings">Settings</string>
    <string name="settings_change_account_password">Change password</string>
    <string name="settings_change_account_password_summary">Change the password of the Qabel account</string>
    <string name="change_boxaccount_password_message">Please enter a new password to change your Qabel account password.</string>
    <string name="dialog_headline_please_wait">Please wait</string>
    <string name="dialog_message_server_communication_is_running">Server communication is running</string>
    <string name="headline_create_box_account">Create Qabel account</string>
    <string name="server_access_not_successfully_retry_question">Server access failed. Do you want to retry?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="dialog_headline_warning">Warning</string>
    <string name="skip_create_identity">Skipping identity creation</string>
    <string name="last_identity_delete_create_new">You have deleted your last identity. Create a new identity</string>
    <string name="active_identity_changed">Change to identity %s</string>
    <string name="server_access_failed_or_invalid_check_internet_connection">Server communication failed. Please check if you entered all data and that your internet connection is stable</string>
    <string name="password_to_short">This password is to short. It must contain at least 8 characters.</string>
    <string name="password_contains_user">The password is too similar to the username</string>
    <string name="password_digits_only">Numeric only passwords are not allowed.</string>
    <string name="email_address_invalid">Your email address is invalid. Please check it and try it again.</string>
    <string name="phone_number_invalid">Your phone number is invalid. Please check it and try again.</string>
    <string name="btn_create_identity">Create identity</string>
    <string name="create_account_final_headline">Qabel account registered</string>
    <string name="change_account_password_oldpassword_hint">Current password</string>
    <string name="change_account_password_newpassword1_hint">Password</string>
    <string name="btn_reset_password">Reset password</string>
    <string name="ExportAsContact">Export Public Contact</string>
    <string name="ExportAsContactWithQRcode">Show QR</string>
    <string name="edit">Edit</string>
    <string name="general_settings">General settings</string>
    <string name="settings_key_bugreporting_enabled" translatable="false">bugreporting_enabled</string>
    <string name="settings_bugreporting_enable_summary">You will be asked again for permission before any report is sent</string>
    <string name="settings_bugreporting">Bug reporting</string>
    <string name="debug_send_feedback_to_pm">Tell us what you think about Qabel and any suggestions you have</string>
    <string name="contact">Contact</string>
    <string name="ShareToQabelUser">Share</string>
    <string name="Unshare">Revoke share</string>
    <string name="help_main_headline_tou">Terms of use</string>
    <string name="help_main_headline_data_policy">Data policy</string>
    <string name="help_main_headline_about_us">Imprint</string>
    <string name="help_main_headline_app_version">App Version</string>
    <string name="help_key_main_app_version" translatable="false">key_appversion</string>
    <string name="help_key_main_app_data_policy" translatable="false">key_data_policy</string>
    <string name="help_key_main_app_tou" translatable="false">ley_tou</string>
    <string name="help_key_main_app_about_us" translatable="false">key_about_us</string>
    <string name="message_welcome_disclaimer_headline">\u0020License Stuff\n</string>
    <string name="message_welcome_disclaimer_message_legal_note">You have to agree\nto our legal notes</string>
    <string name="btn_welcome_disclaimer_show_legal_notes">Show Terms of Service</string>
    <string name="cb_welcome_disclaimer_legal_note_unchecked">Accept Terms of Service </string>
    <string name="cb_welcome_disclaimer_privacy_note_unchecked">Accept Privacy Notes</string>
    <string name="message_welcome_disclaimer_message_privacy_note">and to our\nPrivacy Notes</string>
    <string name="btn_welcome_disclaimer_show_privacy_notes">Show Privacy Notes</string>
    <string name="message_welcome_disclaimer_qabel_is_public_source">\u0020is published Source</string>
    <string name="btn_welcome_disclaimer_show_qapl">Show QAPL</string>
    <string name="message_welcome_qabel_big">QABEL </string>
    <string name="help">Legal Stuff</string>
    <string name="action_tellafriend">Invitation</string>
    <string name="filename">Filename</string>
    <string name="folder">Folder</string>
    <string name="received_message_label">Message</string>
</resources>