<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/general_settings">
        <CheckBoxPreference
            android:checked="true"
            android:defaultValue="true"
            android:key="@string/settings_key_bugreporting_enabled"
            android:summary="@string/settings_bugreporting_enable_summary"
            android:title="@string/settings_bugreporting"/>
    </PreferenceCategory>
    <PreferenceCategory

        android:title="@string/settings_headline_boxaccount">
        <Preference

            android:key="@string/settings_key_change_password"
            android:summary="@string/settings_change_account_password_summary"
            android:title="@string/settings_change_account_password"/>
    </PreferenceCategory>


</PreferenceScreen>