<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/open"
        android:title="@string/Open"
        android:icon="@drawable/open_in_new"/>
    <item
        android:id="@+id/edit"
        android:title="@string/edit"
        android:icon="@drawable/pencil"/>
    <item
        android:id="@+id/fordward"
        android:title="@string/ShareToQabelUser"
        android:icon="@drawable/account_multiple"/>
    <item
        android:id="@+id/unshare"
        android:title="@string/Unshare"
        android:icon="@drawable/folder_account"/>
    <item
        android:id="@+id/share"
        android:title="@string/Send"
        android:icon="@drawable/share_variant"/>
    <item
        android:id="@+id/delete"
        android:title="@string/Delete"
        android:icon="@drawable/delete"/>
    <item
        android:id="@+id/export"
        android:title="@string/Export"
        android:icon="@drawable/export"/>
</menu>
