<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_contacts"
            android:icon="@drawable/account_multiple"
            android:title="@string/Contacts"/>
        <item
            android:id="@+id/nav_browse"
            android:icon="@drawable/folder"
            android:title="@string/filebrowser"/>

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/settings"
            android:title="@string/action_settings"/>
        <item
            android:id="@+id/nav_tellafriend"
            android:icon="@drawable/heart"
            android:title="@string/action_tellafriend"/>
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/information"
            android:title="@string/action_about"/>
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/help_circle"
            android:title="@string/help"/>
    </group>
</menu>
