<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/identity_edit"
        android:icon="@drawable/pencil"
        android:title="@string/edit"/>
    <item
        android:id="@+id/identities_delete"
        android:icon="@drawable/delete"
        android:title="@string/Delete"/>
    <item
        android:id="@+id/identities_export"
        android:icon="@drawable/key_variant"
        android:title="@string/ExportPrivateKey"/>
    <item
        android:id="@+id/identities_export_as_contact"
        android:icon="@drawable/export"
        android:title="@string/ExportAsContact"/>
    <item
        android:id="@+id/identities_export_as_contact_qrcode"
        android:icon="@drawable/qrcode"
        android:title="@string/ExportAsContactWithQRcode"/>
</menu>
