<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:padding="@dimen/activity_vertical_margin">

    <de.qabel.qabelbox.views.TextViewFont
        android:id="@+id/tv_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:text="@string/change_boxaccount_password_message"
        android:textSize="@dimen/textsize_normal" />


    <de.qabel.qabelbox.views.EditTextFont
        android:id="@+id/et_password1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/create_account_password1_hint"
        android:lines="1"
        android:maxLines="1"
        android:singleLine="true" />

    <de.qabel.qabelbox.views.EditTextFont
        android:id="@+id/et_password2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/create_account_password2_hint"
        android:lines="1"
        android:maxLines="1"
        android:singleLine="true" />


</LinearLayout>




