<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_text_share_receiver"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="de.qabel.qabelbox.chat.view.views.TextShareReceiverActivity"
    tools:showIn="@layout/activity_text_share_receiver"
    android:layout_marginEnd="@dimen/default_space"
    android:layout_marginStart="@dimen/default_space"
    android:orientation="vertical">

    <include layout="@layout/background_progress_bar" />

    <TextView
        style="@style/InputLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:text="@string/identity" />

    <Spinner
        android:id="@+id/identitySelect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:dropDownSelector="@drawable/menu_down"
        android:hint="@string/identity"
        android:spinnerMode="dropdown" />

    <TextView
        style="@style/InputLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:text="@string/contact" />

    <Spinner
        android:id="@+id/contactSelect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:dropDownSelector="@drawable/menu_down"
        android:hint="@string/contact"
        android:spinnerMode="dropdown" />

    <TextView
        style="@style/InputLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:text="@string/received_message_label" />

    <EditText
        android:id="@+id/receivedText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textShortMessage"
        android:maxLines="1"
        android:text="" />

</LinearLayout>
